Updated the NodeCreateTransformer and BlockFileTransformerTest.
Signed-off-by: Harsh Sawarkar <harshsawarkar111@gmail.com>